--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.resources.chain.strategy.content.paths=/**
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.static-locations=classpath:/static/,classpath:/target/
 
-###devtoolsÈÈ²¿Êğstart
+###devtools start
 spring.devtools.restart.enabled: true
 
 ###neo4j
